--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -58,6 +58,12 @@
       {% include svg/facebook.svg %}
     </a>
 
+    <a 
+      class="icon{% if page.url == '/tags' %} active{% endif %}"
+      href="https://twitter.com/{{site.author.twitter-user}}">
+      {% include svg/twitter.svg %}
+    </a>
+
   <!--{% if search_page %}
     <a id="search-link"
        class="icon{% if page.url == '/search' %} active{% endif %}"
