--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -25,10 +25,10 @@
 body {
   color: $sidebar-text-color;
   background-color: $sidebar-bg-color;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to bottom,
     lighten($sidebar-bg-color, 7%),
-    darken($sidebar-bg-color, 7%));
+    darken($sidebar-bg-color, 7%)); */
   display: flex;
   flex-direction: column;
   min-width: 100vw;
@@ -222,7 +222,7 @@ body {
   }
 
   &:hover, &:focus {
-    text-decoration: underline;
+    text-decoration: none;
     &.icon {
       text-decoration: none;
     }
@@ -234,9 +234,10 @@ body {
 }
 
 .title-text{
-  font-size: 48px;
+  font-size: 35px;
   display:block;
   text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #sidebar .site-title {
