--- a/_sass/hydeout/_modifications.scss
+++ b/_sass/hydeout/_modifications.scss
@@ -1,7 +1,7 @@
 .profile-img{
-    width: 150px;    
-    height: 200px;
+    width: 145px;    
+    height: 145px;
     display:block;
     margin:auto;
-    //border-radius: 70px;
+    border-radius: 70px;
 }
